Fix section vertical spacing

--- a/apps/root/static/root/css/base.css
+++ b/apps/root/static/root/css/base.css
@@ -118,8 +118,12 @@ a.tertiary::after {
 }
 
 .container {
-  margin: var(--spacing-md) auto 0 auto;
+  margin: var(--spacing-lg) auto 0 auto;
   max-width: 50rem;
+}
+
+.container:first-child {
+  margin-top: 0;
 }
 
 .section-header {
